# Moderntale-Redux

./: .gitignore  LICENSE  README.md  requirements_dev.txt  versions_history.txt
client/: Moderntale Redux.lnk
client/engine/: mtx.ilk  net_transfer.ilk  preferences.cfg
client_src/: CMakeLists.txt  CMakeSettings.json  api  get_skin_list.py  skin_manager.py  x_input.ahk
client_src/game/: asio.hpp  functions.hpp  game.cpp  global.hpp  incl.hpp  init.hpp  io.hpp  locale.hpp  main.cpp
client_src/game/nodes/: button.hpp  object.hpp  room.hpp  scene.hpp
client_src/game/scenes/: menu.hpp
client_src/net_transfer/: consts.h  main.c  main.h
docs/: __requirements.txt  __requirements_system.txt  __versions_history.txt  filter.txt  skin_manager.txt  text_colour_tags.txt
server/: blacklist.json  filter.txt  package-lock.json  properties.json  tsconfig.json  tsconfig.tsbuildinfo  whitelist.json
server/.root/: psw.json  server.ilk
server/src/: main.ts  read_properties.ts
server_src/: err.txt  main.ts  tsconfig.json
source/: CMakeLists.txt  api
source/client/: __pyinstaller.cmd  skin_manager.py  x_input.ahk
source/client/game/: asio.hpp  functions.hpp  game.cpp  global.hpp  incl.hpp  init.hpp  io.hpp  locale.hpp  utility.hpp
source/client/game/node/: actor.hpp  basic_objects.hpp  scene.hpp  triggers.hpp
source/client/game/nodes/: button.hpp  object.hpp  scene.hpp
source/net_transfer/: consts.h  main.c  main.h
source/server/: filter.h  hash.h  incl.h  json.h  main.c  utility.h
source/server/j/: parson.c  parson.h
